Adicionar funcionalidade de Especialidade com operações de CRUD
Implementados os endpoints e serviços de CRUD para gerenciar "Especialidade". Integrada a Especialidade com a entidade Medico e atualizados os DTOs, repositórios e controladores relacionados para suportar associações e manipulação de dados.